# fatfs-sdcard-spi

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md
.claude/: settings.local.json
.github/workflows/: ci.yml
Drivers/sd_card/: CMakeLists.txt  README.md
Drivers/sd_card/Inc/: sd_benchmark.h  sd_spi.h
Drivers/sd_card/Src/: sd_benchmark.c  sd_functions.c  sd_spi.c
Inc/: sd_diskio_spi.h  sd_functions.h  sd_spi.h
Src/: sd_benchmark.c  sd_diskio_spi.c  sd_functions.c
code_sample/SD_Card_SPI_FatFs/: .mxproject  SD_Card_SPI_FatFs.ioc  UART_QUICK_REF.md  UART_SETUP.md
code_sample/SD_Card_SPI_FatFs/Core/Inc/: main.h
code_sample/SD_Card_SPI_FatFs/Core/Src/: dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c
code_sample/SD_Card_SPI_FatFs/Drivers/CMSIS/Include/: cmsis_gcc.h
code_sample/SD_Card_SPI_FatFs/Drivers/sd_card/Inc/: sd_diskio_spi.h  sd_functions.h  sd_spi.h
code_sample/SD_Card_SPI_FatFs/Drivers/sd_card/Src/: sd_spi.c
code_sample/SD_Card_SPI_FatFs/FATFS/App/: fatfs.h
code_sample/SD_Card_SPI_FatFs/cmake/stm32cubemx/: CMakeLists.txt
sample/SD_Card_SPI_FatFs/: CMakeLists.txt  DEVELOPMENT.md  README.md  UART_INTEGRATION.md
sample/SD_Card_SPI_FatFs/Core/Inc/: stm32f4xx_it.h
sample/SD_Card_SPI_FatFs/Core/Src/: spi.c
tests/: CMakeLists.txt  mock_hal.c  mock_hal.h  test_helpers.h  test_sd_diskio.c  test_sd_init.c  test_sd_multiblock.c  test_sd_readwrite.c  test_sd_utils.c
tests/mocks/: diskio.h  ff_gen_drv.h  main.h
